2016-05-31 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* setup_afs.sh: pick up root 6.06.04 (was 6.04.00), gcc 4.9.3 (was 4.9.2), python 2.7.4
	(was 2.7.6)

2016-05-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* ConfigMgr.cxx: implement warning about HypoTestInverter cleanup _only_
	in case points are actually removed
	* StatTools.cxx: idem

2016-05-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* macros/Examples/contourplot/makelistfiles.C: CollectAndWriteHypoTests()
	is no longer a void function, fix the example

2016-05-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Fixes for HISTFITTER-17
	* python/channel.py: change doBlindingOverwrite to simpler flag "blind";
	old method is now @property plus a deprecation warning
	* python/configManager.py: rewrite blinding block in better form; use new
	flag

2016-05-17 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/configManager.py: comment fixes
	* python/fitConfig.py: debug message for output filename
	* src/Utils.cxx: typo in GeneratePlots() printout fixed
	* scripts/HistFitter.py: run all fit configs when -f is specified, not
	just the first one
	* set svn ignore for .*.swp in all dirs

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.h: introduce new GeneratePlots(), which is effectively
	GenerateFitAndPlot - without the fit and a fitConfig passed. Useful for
	plotting existing afterFit workspaces
	* src/Utils.cxx: new GeneratePlots() method

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.h: new 'noFit' option for GenerateFitAndPlot
	* src/Utils.cxx: allow GenerateFitAndPlot to recycle afterFit workspace
	* scripts/HistFitter.py: call GenerateFitAndPlotCPP even if -f not
	specified; set the noFit flag in this case

2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: write out nll curve in ROOT file, not just plots 

2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow 'all' as shorthand for 'allPlots'. Fix