@@ -1,4 +1,8 @@
 2016-05-31 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* Allow use of square brackets in channel names
+	* See HISTFITTER-15
+
+2016-05-31 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* setup_afs.sh: pick up root 6.06.04 (was 6.04.00), gcc 4.9.3 (was 4.9.2), python 2.7.4
 	(was 2.7.6)
 
